# tavif

./: .gitignore  1.0.0  LICENCE.txt  README.md  README_ja.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.mts
.github/workflows/: publish.yaml
app/: atom.ts  globals.css  index.d.ts  layout.tsx  page.tsx
app/components/BaseModal/: BaseModal.tsx
app/components/ConvertButton/: ConvertButton.tsx  __ConvertButton.test.tsx
app/components/Dialog/: Dialog.tsx
app/components/Dropzone/: Dropzone.tsx
app/components/FileDialog/: FileDialog.tsx  __FileDialog.test.tsx  utils.ts
app/components/InputTab/: InputNavMenu.tsx  InputNubMenu.tsx  InputTab.tsx  Null.tsx
app/components/InputTab/__test__/: InputNavMenu.test.tsx
app/components/LoadingModal/: LoadingModal.tsx  __LoadingModal.test.tsx
app/components/OutputTab/: Null.tsx  OutputNavMenu.tsx  OutputTab.tsx
app/components/ProcessedFiles/: File.tsx  ProcessedFiles.tsx  index.d.ts
app/components/SelectFiles/: File.tsx  SelectFiles.tsx  index.d.ts  utils.ts
app/components/SettingsMenu/: ExtensionType.tsx  MimeType.tsx  Quality.tsx  SettingsMenu.tsx
app/components/TabButton/: TabButton.tsx
app/components/WindowMenu/: WindowMenu.tsx
app/components/icons/: Check.tsx  Download.tsx  Drop.tsx  FolderOpen.tsx  RightArrow.tsx
app/lib/: atom.ts  utils.ts  utils.tsx
public/: LICENSE.txt
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+4 files in other folders)
