[package]
name = "tavif"
version = "0.1.0"
description = "This project is a lightweight and fast desktop application for converting images to AVIF/WEBP format, developed using the Rust Tauri framework and Next.js."
authors = ["moriyaharumi"]
license = "MIT"
repository = "https://github.com/harumiWeb/tavif"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
anyhow = "1.0"
rav1e = "0.7.1"
image = { version = "0.24", features = ["avif"] }
webp = "0.2"
rayon = "1.10.0"

[dependencies.uuid]
version = "1.11.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
